docs: present help as a customizable toolkit